# framecraft

./: .gitignore  CLAUDE.md  package-lock.json  package.json  test-db-size.ts  test-import.js  test-mj-fetch.ts  test-reqwest.rs  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_tokens.sql  003_meta.sql  004_token_seeds.sql  005_notion_library.sql  006_avoidance_seed.sql  007_token_patterns.sql  008_token_favorite.sql  009_references.sql  010_projects.sql  011_v4_workflow.sql  012_deliverable_align.sql  013_generation_queue.sql  014_project_setup_metadata.sql  015_comparison_workflow.sql  016_creative_directions.sql  017_shot_sequence.sql  018_campaigns.sql  019_queue_pin.sql  020_recipe_use_count.sql  021_prompt_analysis_fields.sql  022_nano_banana_library.sql  023_prompt_thumbnail.sql  024_remove_seeded_recipes.sql  025_prompt_builder_state.sql  026_prompt_thumbnail_override.sql  027_prompt_variant_label.sql  028_inconsistency_events.sql  029_color_grade_category.sql  030_direction_storyboards.sql  031_creative_strategy.sql  032_creative_taxonomy.sql  033_styling_taxonomy.sql  034_category_field_order.sql  035_learned_formulas.sql  036_ai_suggestion_events.sql  037_duplicate_dismissals.sql  038_cinema_studio.sql  039_cinema_shot_prompt_versions.sql  040_cinema_asset_versioning.sql
src-tauri/src/: fetch_image.rs  lib.rs  library_lock.rs  library_package.rs  main.rs  main_test.rs  native_sqlite.rs  portable_sqlite.rs
(+352 files in other folders)
